dark mode fixed

--- a/chamber/styles/base.css
+++ b/chamber/styles/base.css
@@ -205,7 +205,6 @@ h3 {
   width: 100%;
   font-size: larger;
   border: 1px solid var(--accent2-color);
-  background-color: var(--accent2-color);
 
   padding: 10px 5px 10px 0;
   text-align: center;
